adds schema information

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <h1>Meet the owner</h1>
         <ul>
           <li>Name: <span itemprop="name">John Doe</span></li>
-          <li>Title: <span itemprop="">CEO</span></li>
-          <li>Email: <span itemprop="">johnjoe@jambox.ca</span></li>
-          <li>Phone: <span itemprop="">613-000-0000</span></li>
+          <li>Title: <span itemprop="jobTitle">CEO</span></li>
+          <li>Email: <span itemprop="email">johnjoe@jambox.ca</span></li>
+          <li>Phone: <span itemprop="telephone">613-000-0000</span></li>
         </ul>
         <h1>Address</h1>
         <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
